src.1/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>qbdialer__ContactScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The InsideSales.com NeuralView Hourly Contactability Score Object Lookup</description>
        <label>NeuralView: Hourly Contactability ID</label>
        <referenceTo>qbdialer__ContactScore__c</referenceTo>
        <relationshipLabel>Contact Score Items_C</relationshipLabel>
        <relationshipName>Contact_Score_Items_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Contact.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurSoft_Status__c</fullName>
        <description>Mapping via Parent/Child mappings</description>
        <label>ISB Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecurSoft__Intacct_Contact_ID__c</fullName>
        <label>Intacct Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurSoft__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurSoft__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecurSoft__Synced_With_Intacct_Date__c</fullName>
        <label>Synced With Intacct Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecurSoft__Synced_With_Intacct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced With Intacct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <description>Referral ID for tracking Influitive referrals.</description>
        <externalId>true</externalId>
        <label>Referral ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_from_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Qualified_Lead_SQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be set to true by clicking the &quot;Sales Qualified&quot; button and will be reset to false when the Contact is put through a Distribution Group. For ROE purposes.</description>
        <label>Sales Qualified Lead (SQL)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAML_Federation_ID__c</fullName>
        <label>SAML Federation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sertifi2_0__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Vertical__c</fullName>
        <description>Used for new Contacts coming from HubSpot to create new Account. Updated via Parent/Child Mapping in Apex</description>
        <label>Sub-Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Cosmetic Surgery</fullName>
                </value>
                <value>
                    <fullName>Family Medicine or General Physician</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
                <value>
                    <fullName>OB/GYN or Womens Health</fullName>
                </value>
                <value>
                    <fullName>Allergy &amp; Immunology</fullName>
                </value>
                <value>
                    <fullName>ENT-Otolaryngology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Bariatric, Metabolic and Weight Health</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Geriatric Medicine</fullName>
                </value>
                <value>
                    <fullName>Heart and Vascular</fullName>
                </value>
                <value>
                    <fullName>HIV/Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Medical Spa or Aesthetic Medicine</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>General Surgery</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Pain Management or Physical Medicine or Physiatry</fullName>
                </value>
                <value>
                    <fullName>Podiatry</fullName>
                </value>
                <value>
                    <fullName>Psychiatry or Mental Health or Substance Rehabilitation</fullName>
                </value>
                <value>
                    <fullName>Radiology or Imaging</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>General Dentistry</fullName>
                </value>
                <value>
                    <fullName>Orthodontistry</fullName>
                </value>
                <value>
                    <fullName>Endodontistry</fullName>
                </value>
                <value>
                    <fullName>Pedodontistry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sugar_Contact_ID__c</fullName>
        <label>Sugar Contact ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugar_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Sugar ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sugar_Owner_Username__c</fullName>
        <label>Sugar Owner Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opts out the Contact from getting Surveys</description>
        <label>Survey Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) for the Contact in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Contact in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time for the Contact in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time for the Contact in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Lst__c</fullName>
        <description>For internal use of the Local Time App. This field is used in the PContacts tab.

*DO NOT* add it to the contact page layout or contact list views as it does not work.</description>
        <label>Local Time List</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) for the Contact.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Contact.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the Contact.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp;
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;) 
)</formula>
        <inlineHelpText>Shows the local time for the Contact.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__LT_Info__c</fullName>
        <description>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</description>
        <inlineHelpText>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</inlineHelpText>
        <label>LT Info</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name.</description>
        <inlineHelpText>Full timezone name.</inlineHelpText>
        <label>Timezone (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_IANA__c</fullName>
        <description>Timezone as defined by Internet Assigned Numbers Authority (IANA).</description>
        <inlineHelpText>Timezone as defined by Internet Assigned Numbers Authority (IANA).</inlineHelpText>
        <label>Timezone (IANA)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..)</description>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTF_Offset__c</fullName>
        <description>Shows the current UTC timezone offset of the Contact. Uses the mailing address, and in its absence the Phone number field in the calculation.</description>
        <inlineHelpText>Shows the UTC timezone offset of the Contact.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <description>Used for new Contacts coming from HubSpot to create new Account. Updated via Parent/Child Mapping in Apex.</description>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Non-Medical</fullName>
                </value>
                <value>
                    <fullName>Physical Rehabilitation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X8_Touch_Nurture__c</fullName>
        <formula>ispickval(Account.X8_Touch_Program__c, &quot;Marketing Nurture&quot;)</formula>
        <label>8 Touch Nurture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Email__c</fullName>
        <description>ZoomInfo Email address for the Contact record.</description>
        <inlineHelpText>ZoomInfo Email address for the Contact record.</inlineHelpText>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Phone__c</fullName>
        <description>ZoomInfo Phone for the Contact record.</description>
        <inlineHelpText>ZoomInfo Phone for the Contact record.</inlineHelpText>
        <label>ZoomInfo Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <recordTypes>
        <fullName>Lead_Contact</fullName>
        <active>true</active>
        <description>Used for contacts associated to leads before conversion</description>
        <label>Lead Contact</label>
    </recordTypes>
    <validationRules>
        <fullName>Email_required_for_Customer_sync</fullName>
        <active>false</active>
        <description>Email required for Customer sync</description>
        <errorConditionFormula>ISBLANK( Email )</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>You must provide a value for Email on the Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_required_for_Customer_sync</fullName>
        <active>false</active>
        <description>Phone required for Customer sync</description>
        <errorConditionFormula>ISBLANK (Phone )</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>You must provide a value for Phone on the Contact</errorMessage>
    </validationRules>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Contact_Role__c</columns>
        <columns>Contact_Role_Multi__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Core_MQL_List</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PM_Sync_Availability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>CoreNurt</value>
        </filters>
        <filters>
            <field>Don_t_Send__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Core MQL List</label>
        <sharedTo>
            <role>ADR_Rep_4</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EM_MQL_List</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PM_Sync_Availability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Emerging</value>
        </filters>
        <filters>
            <field>Don_t_Send__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EM MQL List</label>
        <sharedTo>
            <role>ADR_Rep_6</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Five9_Sync_Content_Partnerships</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Created_Date__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account_TSR_Territory__c</columns>
        <columns>qbdialer__LastCallTime__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Account,Multi-Location Account</value>
        </filters>
        <filters>
            <field>Primary_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Five9 Sync Content Partnerships</label>
        <sharedTo>
            <role>Sales_Operations</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Five9_Sync_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.DO_NOT_CALL</columns>
        <columns>Account_Created_Date__c</columns>
        <columns>AccountSoftware__c</columns>
        <columns>qbdialer__Dials__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Vertical__c</columns>
        <columns>Sub_Vertical__c</columns>
        <columns>qbdialer__LastCallTime__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AccountSoftware__c</field>
            <operation>equals</operation>
            <value>a00i000000Mq9oB</value>
        </filters>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>equals</operation>
            <value>smith</value>
        </filters>
        <label>Five9 Sync View</label>
        <sharedTo>
            <role>Sales_Operations</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HubSpot_Contacts_Created_Today</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>sr-hubsp</value>
        </filters>
        <label>HubSpot Contacts Created Today</label>
    </listViews>
    <listViews>
        <fullName>HubSpot_Contacts_Modified_Today</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>sr-hubsp</value>
        </filters>
        <label>HubSpot Contacts Modified Today</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_New_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>My New Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Web_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>SR Website</value>
        </filters>
        <label>My Web Leads</label>
    </listViews>
</CustomObject>